[package]
name = "refunnel-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
hickory-proto = "0.25.2"
lru = "0.16.3"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
